--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 <title>"Писатели серебряного века" </title>
 <link href="css/styles.css" rel="stylesheet" >
 <link href="https://ucare.timepad.ru/d350651f-e9d8-4360-a13c-d019c211cefa/poster_event_1806800.jpg" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<!-- Varioqub experiments -->
+<script type="text/javascript">
+(function(e, x, pe, r, i, me, nt){
+e[i]=e[i]||function(){(e[i].a=e[i].a||[]).push(arguments)},
+me=x.createElement(pe),me.async=1,me.src=r,nt=x.getElementsByTagName(pe)[0],nt.parentNode.insertBefore(me,nt)})
+(window, document, 'script', 'https://abt.s3.yandex.net/expjs/latest/exp.js', 'ymab');
+ymab('metrika.96351645', 'init'/*, {clientFeatures}, {callback}*/);
+</script>
 </head>
 
 <!-- Yandex.Metrika counter -->
